vijay.html was added

--- a/vijay.html
+++ b/vijay.html
@@ -2,3 +2,6 @@
   <h1>vijay fan page</h1>
   <h2>Thalapathy</h2>
 </center>
+<center>
+<p>vijsy is the actor and politician of future tvk part of tamilnadu</p>
+</center>
